fix(scroll-to-top): only show button on tablets and desktops, clean mobile styles

--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -67,24 +67,8 @@
     }
   }
 
-  @media (min-width: 768px) and (max-width: 1023px) {
-    &:hover,
-    &:active {
-      @apply transform-none bg-base-800 text-base-300;
-    }
-  }
-
   @media (max-width: 767px) {
     display: none;
-  }
-
-  @media (hover: none) and (pointer: coarse) {
-    @apply bg-transparent text-base-300 transition-none;
-
-    &:hover,
-    &:active {
-      @apply bg-transparent text-base-300 transform-none;
-    }
   }
 
   @screen lg {
